@@ -291,6 +291,13 @@ Vfs_Init(interp)
     if (Tcl_PkgRequire(interp, "Tcl", "8.4", 0) == NULL) {
 	return TCL_ERROR;
     }
+    /* 
+     * Safe interpreters are not allowed to modify the filesystem!
+     * (Since those modifications will affect other interpreters).
+     */
+    if (Tcl_IsSafe(interp)) {
+        return TCL_ERROR;
+    }
     if (Tcl_PkgProvide(interp, "vfs", "1.0") == TCL_ERROR) {
         return TCL_ERROR;
     }
